[package]
name = "live-wait"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

tui = "0.8"
termion = "1.5"
sse-client = { version = "1.1", features = ["native-tls"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
