[package]
name = "live_wait"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2018"

[dependencies]
#rocket = "0.4.4"
#rocket = { path = "./Rocket/core/lib" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
#tokio = { version = "0.2.0", features = ["fs", "io-util"] }

async-trait = "0.1.24"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

tui = "0.8"
termion = "1.5"
sse-client = { version = "1.1", features = ["native-tls"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

async-stream = "0.2.0"
futures-util = "0.3.0"
pin-project-lite = "0.1.0"

[dependencies.rocket_contrib]
#version = "0.4.4"
#path = "./Rocket/contrib/lib"
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"
default-features = false
features = ["json"]
