[package]
name = "live_wait_client"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2018"

[dependencies]
tui = "0.8"
termion = "1.5"
sse-client = { version = "1.1", features = ["native-tls"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
live_wait_server = { path = "../live_wait_server" }
