[package]
name = "live_wait_server"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
async-trait = "0.1.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
async-stream = "0.2.0"
futures-util = "0.3.0"
pin-project-lite = "0.1.0"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"
default-features = false
features = ["json"]
